# customer-support-assistant

./: .gitignore  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: add_conversations_and_messages.py  add_document_embedding_fields.py  add_document_parsing_columns.py  add_documents_table.py  add_evaluation_benchmark_tables.py  add_ingestion_jobs.py  add_parent_child_chunks_and_ingestion_.py  initialSchema.py
backend/docker/: api-entrypoint.sh  celery-entrypoint.sh  migrate-entrypoint.sh
backend/src/: appConfig.py  main.py
backend/src/ai/: chatService.py  citationBuilder.py  contextBuilder.py  geminiProvider.py  generationUsage.py  groqProvider.py  llmProvider.py  promptBuilder.py  providerRegistry.py  providerRouter.py  ragHealth.py  ragResponseBody.py  ragService.py  streaming_chat_service.py
backend/src/auth/: authService.py  clerkAuth.py  userAccess.py
backend/src/chunking/: __init__.py  childChunk.py  chunkMetadata.py  chunkStrategy.py  docChunk.py  parentChildBuilder.py  structureAwareChunker.py  textChunker.py
backend/src/contextAssembly/: __init__.py  contextAssemblyEngine.py  contextAssemblyModels.py  contextAssemblyRules.py  contextPackage.py
backend/src/conversations/: conversationRepository.py  conversationTitle.py  messageRepository.py  priorTurnsFormat.py
backend/src/core/: appEnvironment.py  deploymentSettingsValidation.py
backend/src/database/: databaseManager.py  databaseSession.py  db_readiness.py  migrationState.py  pool_metrics.py  queryPerformanceTracker.py  syncUrl.py  urlNormalization.py
backend/src/documents/: childChunkRepository.py  documentRepository.py  documentService.py  ingestVectors.py  ingestionJobRepository.py  ingestionMetadataRepository.py  ingestionRetryPolicy.py  mimeValidator.py  parentChunkRepository.py  postUploadParse.py  uploadSecurity.py
backend/src/embeddings/: embeddingBatch.py  embeddingProvider.py  embeddingService.py  huggingfaceEmbedding.py
backend/src/evaluation/: benchmarkDatasetService.py  evaluationConstants.py  evaluationReadService.py  evaluationRunService.py
backend/src/evaluationEngine/: __init__.py  evaluationEngine.py  evaluationMetrics.py  evaluationModels.py  evaluationResult.py
backend/src/generation/: __init__.py  generationEngine.py  generationMetrics.py  generationModels.py  generationResult.py
backend/src/jobs/: celeryApp.py  evaluationTasks.py  ingestionOrchestrator.py  ingestionTasks.py  jobConfig.py
backend/src/middleware/: authMiddleware.py  observabilityMiddleware.py  organizationMiddleware.py  secureHeadersMiddleware.py
backend/src/models/: __init__.py  baseModel.py  childChunkModel.py  conversationModel.py  documentModel.py  ingestionJobModel.py  ingestionMetadataModel.py  messageModel.py  organizationModel.py  parentChunkModel.py  roleModel.py  userModel.py  userRolesTable.py
backend/src/observability/: __init__.py  celeryHealth.py  deploymentReadiness.py  (+9 more)
(+193 files in other folders)
