[project]
name = "recallstack-backend"
version = "0.1.0"
description = "RecallStack backend API"
requires-python = ">=3.12,<3.13"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "api",
    "auth",
    "core",
    "middleware",
    "shared",
    "observability",
    "database",
    "models",
    "repositories",
    "schemas",
    "tests",
]
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]
"alembic/env.py" = ["E402"]
"src/tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"
packages = [
    "api",
    "auth",
    "core",
    "middleware",
    "shared",
    "observability",
    "database",
    "models",
    "repositories",
    "schemas",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/tests"]
pythonpath = ["src"]
python_files = ["*Check.py", "test_*.py", "*_test.py"]
