[project]
name = "recallstack-backend"
version = "0.1.0"
description = "RecallStack backend API"
requires-python = ">=3.12,<3.13"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "src",
]
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ASYNC",
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "."
packages = [
    "src",
]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "numpy",
    "numpy.*",
    "pinecone",
    "pinecone.*",
    "cloudinary",
    "cloudinary.*",
    "redis",
    "redis.*",
    "celery",
    "celery.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["src/tests"]
pythonpath = ["."]
python_files = ["*Check.py", "test_*.py", "*_test.py"]
